Switched to G1, added compresses oops and gc log