@@ -131,10 +131,12 @@ application {
 	mainClass = mainClassName
 	applicationDefaultJvmArgs = [
 			"-server",
-			"-XX:+UseZGC",
+			"-XX:+UseG1GC",
 			"-XX:+PrintCommandLineFlags",
 			"-XX:MinHeapSize=" + 10 * 1024 * 1024,
-			"-XX:MaxRAMPercentage=80.0"
+			"-XX:MaxRAMPercentage=80.0",
+			"-XX:+UseCompressedOops",
+			"-Xlog:gc*=debug:file=/var/log/proxy-gc.log"
 	]
 }
 
